--- a/build
+++ b/build
@@ -1,1 +1,1 @@
-cc -O3 -g -o dbtest db*.c artree/*.c btree1/*.c standalone.c -lpthread
+cc -std=gnu99 -O2 -g -o dbtest db*.c artree/*.c btree1/*.c standalone.c -lpthread
