--- a/build
+++ b/build
@@ -1,1 +1,1 @@
-cc -std=c11 -D _GNU_SOURCE -O2 -g -o dbtest db*.c artree/*.c btree1/*.c standalone.c -lpthread
+cc -D _GNU_SOURCE -O2 -g -o dbtest db*.c artree/*.c btree1/*.c standalone.c -lpthread -latomic
