--- a/build
+++ b/build
@@ -1,1 +1,1 @@
-gcc -std=c99 -O2 -g -o dbtest db*.c base64.c artree/*.c btree1/*.c btree2/*.c standalone.c -lpthread -latomic
+gcc -std=c99 -O2 -g -o dbtest db*.c base64.c artree/*.c btree1/*.c btree2/*.c standalone.c mutex/mutex.c rwlock/readerwriter.c -lpthread -latomic
