consolidate mvcc submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "rwlock"]
 	path = rwlock
 	url = https://github.com/malbrain/rwlock
+[submodule "Hi-Performance-Timestamps"]
+	path = Hi-Performance-Timestamps
+	url = https://github.com/malbrain/Hi-Performance-Timestamps
+[submodule "MVCC-ACID-transactions"]
+	path = MVCC-ACID-transactions
+	url = https://github.com/malbrain/MVCC-ACID-transactions
