--- a/alpha/build
+++ b/alpha/build
@@ -1,1 +1,1 @@
-gcc -std=c11 -O2 -g -o standalone db*.c base64.c artree/*.c btree1/*.c btree2/*.c standalone.c mutex/mutex.c rwlock/readerwriter.c -lpthread -latomic
+gcc -std=c11 -O2 -g -o standalone db*.c mvcc*.c base64.c artree/*.c btree1/*.c standalone.c mutex/mutex.c rwlock/readerwriter.c Hi-Performance-Timestamps/timestamps.c -lpthread -latomic
