--- a/build
+++ b/build
@@ -1,1 +1,1 @@
-gcc -std=gnu99 -O2 -g -o standalone db*.c base64.c mvcc_db*.c artree/*.c btree1/*.c btree2/*.c standalone.c mutex/mutex.c rwlock/readerwriter.c Hi-Performance-Timestamps/timestamps.c -lpthread -latomic
+gcc -std=gnu99 -O2 -g -o standalone db*.c base64.c -D RDTSC mvcc_db*.c artree/*.c btree1/*.c btree2/*.c standalone.c mutex/mutex.c rwlock/readerwriter.c Hi-Performance-Timestamps/timestamps.c -lpthread -latomic
